# vidaudio3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  demo.cpp  infotoaudio.cpp  infotoaudio.h  lint.ps1  main.cpp  sawtooth  sawtooth.cpp  sawtooth.h  scales.h  synth.cpp  synth.h  webcam_info.cpp  webcam_info.h
